# a-pym-s-life

./: .gitignore  .pre-commit-config.yaml  .scss-lint.yml  README.md  _publish.yml  _quarto.yml  about.qmd  authors.qmd  customisation.scss  customisation_header.html  index.qmd  netlify.toml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
content/blog/2022-05-09-bad-breakup-DRAFT/: bad-breakup.md
sections/: capoeira.qmd  fiction.qmd  mylife.qmd  sciences.qmd
sections/capoeira/a_hora_e_essa/: index.qmd
sections/capoeira/a_mare_ta_cheia_ioio/: index.qmd
sections/capoeira/adeus-povo-bom/: index.qmd
sections/capoeira/adeus_adeus_boa_viagem/: index.qmd
sections/capoeira/adeus_adeus_sereia/: index.qmd
sections/capoeira/amanha_e_dia_santo/: index.qmd
sections/capoeira/e_la_lae_lae_la/: index.qmd
sections/capoeira/eu_vim_la_da_bahia_pra_lhe_ver/: index.qmd
sections/capoeira/eu_vou_botar_minha_rede_na_varanda/: index.qmd
sections/capoeira/folha_seca/: index.qmd
sections/capoeira/lua_ilumino_meu_caminho/: index.qmd
sections/capoeira/marinheiro_so/: index.qmd
sections/capoeira/meu_berimbau_faz_tim_tim_dom_dom/: index.qmd
sections/capoeira/oi_sim_sim_sim/: index.qmd
sections/capoeira/parabens_pra_voce/: index.qmd
sections/capoeira/paranaue/: index.qmd
sections/capoeira/peixinhos_do_mar/: index.qmd
sections/capoeira/quando_eu_toco_meu_gunga_ioio/: index.qmd
sections/capoeira/quem_vem_la/: index.qmd
sections/capoeira/santo_antonio_eu_quero_agua/: index.qmd
sections/fiction/: DRAFT-bad-breakup.qmd
(+45 files in other folders)
