[tool.poetry]
name = "a-pym-s-life"
version = "3.0.0"
description = "Blog sur la vie de PYM : Quand l'improbable est juste le quotidien"
authors = ["Pierre-Yves Martin <pym.aldebaran@pm.me>"]
license = "CC-BY-SA"
readme = "README.md"
packages = [{include = "a_pym_s_life"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
